Updated JDA dependency.